# sallib

./: README.md  pyproject.toml  test.py
src/sallib/: resources.py
src/sallib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sallib/ai/: __init__.py  query.py
src/sallib/images/: manipulation.py
